@@ -1,3 +1,6 @@
+A bunch of classes now implement java.io.Externalizable, including
+all the classes that can be used as literals.
+
 Created a new class gnu.kawa.util.AbstractString, with the Scheme
 alias <abstract-string>.  The old gnu.kawa.util.FString now
 extends AbstractString.  A new class CharBuffer provides an
